# move-memory-manager

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  gcc-debug-compile-tests.sh  gcc-debug-init.sh  gcc-debug-tests.sh  ninja-debug-compile-tests.bat  ninja-debug-init.bat  ninja-tests.bat
.github/workflows/: build.yaml
include/movemm/: export.h  memory-allocator.h  ptr_types.hpp  stl_allocator.hpp
src/movemm/: memory-allocator.cpp  tagged-heap.cpp  temporary-allocator.cpp
tests/: CMakeLists.txt
tests/src/movemm/: memory-allocator.cpp  ptr_types.cpp  stl_allocator.cpp  tagged_heap.cpp
